Automatically refresh browser on template or scss change

--- a/deploy-configs/index-greeting.html
+++ b/deploy-configs/index-greeting.html
@@ -1,3 +1,4 @@
+<!--
 <div class="jumbotron">
     <h1 class="display-4">Maniwani!</h1>
     <p class="lead">An anonymous imageboard for the 21st century</p>
@@ -9,4 +10,21 @@
         entry</a>
         that should help you out. If you want to dive right in, you can see the most
         recently-updated threads on the site below.</p>
+</div>
+-->
+<div class="p-5">
+	<div class="row">
+		<div class="col-md-6 col-lg-5">
+			<img class="img-fluid" src="https://cdn.futatsu.org/mascot.png">
+		</div>
+		<div class="w-100 d-block d-lg-none"></div>
+		<div class="col-auto col-lg-6">
+			<p class="display-4">The maker's haven.</p>
+			<hr class="my-4">
+			<p>Futatsu is an imageboard intended to promote and discuss all different kinds of self-made digital content! Come
+				and discuss best practices for programming, drawing, and more, get feedback on your
+				work-in-progress, or show off your latest creation. Below, you can find the most
+				recently-updated threads on the site.</p>
+		</div>
+	</div>
 </div>
